// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GraphvizWasmAdapter: > computedAmazonView 1`] = `
{
  "__": "element",
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "id": "cloud.backend:amazon.s3",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 15,
        "width": 96,
        "x": 419,
        "y": 138,
      },
      "parent": null,
      "points": [
        [
          382,
          162,
        ],
        [
          438,
          162,
        ],
        [
          499,
          162,
        ],
        [
          554,
          162,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "tail": "odiamond",
      "target": "amazon.s3",
    },
  ],
  "height": 300,
  "id": "amazon",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "height": 284,
      "id": "cloud",
      "inEdges": [],
      "kind": "system",
      "labelBBox": {
        "height": 15,
        "width": 49,
        "x": 6,
        "y": 0,
      },
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": null,
      "position": [
        8,
        8,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 400,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "cloud.backend",
      "inEdges": [],
      "kind": "component",
      "labelBBox": {
        "height": 22,
        "width": 80,
        "x": 121,
        "y": 74,
      },
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": "cloud",
      "position": [
        47,
        72,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Backend",
      "width": 321,
    },
    {
      "children": [
        "amazon.s3",
      ],
      "color": "primary",
      "depth": 1,
      "description": "Amazon is a cloud provider",
      "height": 284,
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 15,
        "width": 60,
        "x": 6,
        "y": 0,
      },
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        526,
        8,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 400,
    },
    {
      "children": [],
      "color": "primary",
      "description": "S3 is a storage service",
      "height": 180,
      "id": "amazon.s3",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 44,
        "width": 144,
        "x": 89,
        "y": 64,
      },
      "level": 1,
      "links": null,
      "outEdges": [],
      "parent": "amazon",
      "position": [
        565,
        72,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "S3",
      "width": 321,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "amazon",
  "width": 934,
}
`;

exports[`GraphvizWasmAdapter: > computedCloud3levels 1`] = `
{
  "__": "element",
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "id": "support:cloud.frontend.adminPanel",
      "label": "manages",
      "labelBBox": {
        "height": 15,
        "width": 56,
        "x": 228,
        "y": 234,
      },
      "parent": null,
      "points": [
        [
          228,
          180,
        ],
        [
          228,
          222,
        ],
        [
          228,
          271,
        ],
        [
          228,
          314,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
    {
      "id": "customer:cloud.frontend.dashboard",
      "label": "opens in browser",
      "labelBBox": {
        "height": 15,
        "width": 101,
        "x": 658,
        "y": 234,
      },
      "parent": null,
      "points": [
        [
          658,
          180,
        ],
        [
          658,
          222,
        ],
        [
          658,
          271,
        ],
        [
          658,
          314,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": "fetches data in zero trust network with sso authentification",
      "labelBBox": {
        "height": 32,
        "width": 194,
        "x": 238,
        "y": 562,
      },
      "parent": "cloud",
      "points": [
        [
          234,
          507,
        ],
        [
          236,
          553,
        ],
        [
          240,
          611,
        ],
        [
          243,
          659,
        ],
      ],
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": "fetches data",
      "labelBBox": {
        "height": 15,
        "width": 73,
        "x": 497,
        "y": 570,
      },
      "parent": "cloud",
      "points": [
        [
          564,
          507,
        ],
        [
          531,
          537,
        ],
        [
          494,
          570,
        ],
        [
          458,
          600,
        ],
        [
          433,
          621,
        ],
        [
          405,
          643,
        ],
        [
          378,
          664,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "parent": "cloud.backend",
      "points": [
        [
          408,
          762,
        ],
        [
          467,
          762,
        ],
        [
          535,
          762,
        ],
        [
          595,
          762,
        ],
      ],
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
    {
      "id": "cloud.backend.storage:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 15,
        "width": 96,
        "x": 979,
        "y": 738,
      },
      "parent": null,
      "points": [
        [
          943,
          762,
        ],
        [
          998,
          762,
        ],
        [
          1059,
          762,
        ],
        [
          1114,
          762,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "tail": "odiamond",
      "target": "amazon",
    },
  ],
  "height": 941,
  "id": "cloud3levels",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "height": 180,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 64,
        "width": 237,
        "x": 42,
        "y": 54,
      },
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "parent": null,
      "position": [
        67,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
      "width": 321,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 22,
        "width": 85,
        "x": 118,
        "y": 74,
      },
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "parent": null,
      "position": [
        497,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
      "width": 321,
    },
    {
      "children": [
        "cloud.frontend.adminPanel",
        "cloud.frontend.dashboard",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 2,
      "description": null,
      "height": 670,
      "id": "cloud",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 15,
        "width": 49,
        "x": 6,
        "y": 0,
      },
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": null,
      "position": [
        8,
        263,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 1000,
    },
    {
      "children": [],
      "color": "primary",
      "description": "The admin panel is a webapp that allows support staff to manage customer data.",
      "height": 180,
      "id": "cloud.frontend.adminPanel",
      "inEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 63,
        "width": 255,
        "x": 33,
        "y": 54,
      },
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        67,
        327,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Admin Panel Webapp",
      "width": 321,
    },
    {
      "children": [],
      "color": "primary",
      "description": "The customer dashboard is a webapp that allows customers to view their data.",
      "height": 180,
      "id": "cloud.frontend.dashboard",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 63,
        "width": 273,
        "x": 33,
        "y": 54,
      },
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        488,
        327,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Customer Dashboard Webapp",
      "width": 339,
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "height": 285,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 15,
        "width": 67,
        "x": 6,
        "y": -1,
      },
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud",
      "position": [
        48,
        608,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Backend",
      "width": 920,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Component that allows to query data via GraphQL.",
      "height": 180,
      "id": "cloud.backend.graphql",
      "inEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 64,
        "width": 252,
        "x": 35,
        "y": 54,
      },
      "level": 2,
      "links": null,
      "outEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "parent": "cloud.backend",
      "position": [
        87,
        672,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Graphql API",
      "width": 321,
    },
    {
      "children": [],
      "color": "primary",
      "description": "The backend storage is a component that stores data.",
      "height": 182,
      "id": "cloud.backend.storage",
      "inEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 64,
        "width": 260,
        "x": 31,
        "y": 55,
      },
      "level": 2,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud.backend",
      "position": [
        607,
        671,
      ],
      "shape": "storage",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Backend Storage",
      "width": 321,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "height": 180,
      "id": "amazon",
      "inEdges": [
        "cloud.backend.storage:amazon",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 44,
        "width": 171,
        "x": 75,
        "y": 64,
      },
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        1125,
        672,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 321,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
  "width": 1446,
}
`;

exports[`GraphvizWasmAdapter: > computedCloudView 1`] = `
{
  "__": "element",
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "id": "customer:cloud.frontend",
      "label": "opens in browser",
      "labelBBox": {
        "height": 15,
        "width": 101,
        "x": 266,
        "y": 234,
      },
      "parent": null,
      "points": [
        [
          218,
          180,
        ],
        [
          245,
          222,
        ],
        [
          278,
          273,
        ],
        [
          306,
          316,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
    {
      "id": "support:cloud.frontend",
      "label": "manages",
      "labelBBox": {
        "height": 15,
        "width": 56,
        "x": 485,
        "y": 234,
      },
      "parent": null,
      "points": [
        [
          523,
          180,
        ],
        [
          496,
          222,
        ],
        [
          463,
          273,
        ],
        [
          435,
          316,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "id": "cloud.frontend:cloud.backend",
      "label": "[...]",
      "labelBBox": {
        "height": 15,
        "width": 22,
        "x": 619,
        "y": 392,
      },
      "parent": "cloud",
      "points": [
        [
          530,
          417,
        ],
        [
          590,
          417,
        ],
        [
          657,
          417,
        ],
        [
          718,
          417,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "id": "cloud.backend:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 15,
        "width": 96,
        "x": 1101,
        "y": 393,
      },
      "parent": null,
      "points": [
        [
          1064,
          417,
        ],
        [
          1120,
          417,
        ],
        [
          1181,
          417,
        ],
        [
          1236,
          417,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "tail": "odiamond",
      "target": "amazon",
    },
  ],
  "height": 555,
  "id": "cloudView",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 22,
        "width": 85,
        "x": 117,
        "y": 74,
      },
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud.frontend",
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
      "width": 321,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "height": 180,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 64,
        "width": 237,
        "x": 41,
        "y": 54,
      },
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud.frontend",
      ],
      "parent": null,
      "position": [
        420,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
      "width": 321,
    },
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "height": 284,
      "id": "cloud",
      "inEdges": [
        "support:cloud.frontend",
        "customer:cloud.frontend",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 15,
        "width": 49,
        "x": 6,
        "y": 0,
      },
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": null,
      "position": [
        171,
        263,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 919,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "cloud.frontend",
      "inEdges": [
        "support:cloud.frontend",
        "customer:cloud.frontend",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 22,
        "width": 83,
        "x": 118,
        "y": 74,
      },
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "parent": "cloud",
      "position": [
        210,
        327,
      ],
      "shape": "browser",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Frontend",
      "width": 321,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 22,
        "width": 80,
        "x": 120,
        "y": 74,
      },
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": "cloud",
      "position": [
        730,
        327,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Backend",
      "width": 321,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "height": 180,
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 45,
        "width": 171,
        "x": 75,
        "y": 63,
      },
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        1247,
        327,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 321,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
  "width": 1568,
}
`;

exports[`GraphvizWasmAdapter: > computedIndexView 1`] = `
{
  "__": "element",
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "id": "customer:cloud",
      "label": "opens in browser",
      "labelBBox": {
        "height": 15,
        "width": 101,
        "x": 273,
        "y": 234,
      },
      "parent": null,
      "points": [
        [
          221,
          180,
        ],
        [
          247,
          218,
        ],
        [
          276,
          261,
        ],
        [
          303,
          300,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud",
    },
    {
      "id": "support:cloud",
      "label": "manages",
      "labelBBox": {
        "height": 15,
        "width": 56,
        "x": 482,
        "y": 234,
      },
      "parent": null,
      "points": [
        [
          520,
          180,
        ],
        [
          494,
          218,
        ],
        [
          465,
          261,
        ],
        [
          438,
          300,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud",
    },
    {
      "id": "cloud:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 15,
        "width": 96,
        "x": 581,
        "y": 376,
      },
      "parent": null,
      "points": [
        [
          544,
          400,
        ],
        [
          600,
          400,
        ],
        [
          661,
          400,
        ],
        [
          716,
          400,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud",
      "tail": "odiamond",
      "target": "amazon",
    },
  ],
  "height": 490,
  "id": "index",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 22,
        "width": 85,
        "x": 117,
        "y": 74,
      },
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud",
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
      "width": 321,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "height": 180,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 64,
        "width": 237,
        "x": 41,
        "y": 54,
      },
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud",
      ],
      "parent": null,
      "position": [
        420,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
      "width": 321,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 180,
      "id": "cloud",
      "inEdges": [
        "support:cloud",
        "customer:cloud",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 22,
        "width": 50,
        "x": 135,
        "y": 74,
      },
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud:amazon",
      ],
      "parent": null,
      "position": [
        210,
        310,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 321,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "height": 180,
      "id": "amazon",
      "inEdges": [
        "cloud:amazon",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 44,
        "width": 171,
        "x": 74,
        "y": 64,
      },
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        728,
        310,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 321,
    },
  ],
  "tags": null,
  "title": "",
  "width": 1048,
}
`;
